sumo/tests/sumo/errors/duplicates/vtype_newstyle_plainemission/config.sumocfg
<c>
	<net-file>../net.net.xml</net-file>
	<r>input_routes.rou.xml</r>
</c>

